# api-spec.yaml
@@ -6,29 +6,7 @@ info:
 servers:
   - url: http://127.0.0.1:3000
 paths:
-  /accounts:
-    get:
-      operationId: GetAccounts
-      description: Returns list of array of Accounts
-      responses:
-        '200':
-          description: Successfully returned a list of Accounts
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: string
-                    name:
-                      type: string
-        '500':
-          $ref: '#/components/responses/DeveloperError'
-        '503':
-          $ref: '#/components/responses/UnknownError'
-  /unitofwork:
+  /generatePDF:
     post:
       operationId: UnitOfWork
       description:
@@ -42,6 +20,9 @@ paths:
           application/json:
             schema:
               type: object
+              properties:
+                objectId:
+                  type: string
               properties:
                 accountName:
                   type: string
@@ -63,7 +44,7 @@ paths:
           '{$request.body#/callbackUrl}':
             post:
               description: Response from /unitofwork API
-              operationId: unitOfWorkResponseCallback
+              operationId: generatePDFResponseHandler
               requestBody:
                 content:
                   application/json:
